--- a/assets/stylesheets/redmine_git_mirror.css
+++ b/assets/stylesheets/redmine_git_mirror.css
@@ -1,2 +1,3 @@
 .icon-github { background-image: url(../images/github.png); }
 .icon-gitlab { background-image: url(../images/gitlab.png); }
+.icon-server-go { background-image: url(../images/server-go.png); }
